fix: trial comparison text overflow bug fix

--- a/webui/react/src/pages/ExperimentDetails/TrialsComparisonModal.module.scss
+++ b/webui/react/src/pages/ExperimentDetails/TrialsComparisonModal.module.scss
@@ -19,7 +19,9 @@
     }
     th,
     td {
+      contain: paint;
       padding: 8px;
+      text-overflow: ellipsis;
       width: 180px;
     }
     .tableSelectCell {
